--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.4.2",
+    "@nextui-org/table": "^2.0.36",
+    "framer-motion": "^11.2.11",
     "googleapis": "^140.0.0",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
