--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaotika",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.1.0",
     "@nextui-org/react": "^2.4.2",
     "@nextui-org/table": "^2.0.36",
     "framer-motion": "^11.2.11",
