--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaotika",
-  "version": "0.1.12",
+  "version": "0.1.13",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -18,10 +18,11 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "use-sound": "^4.0.3"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^20.14.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
