--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,8 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "use-sound": ["./node_modules/use-sound/"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
