--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kaotika",
-  "version": "0.1.13",
+  "version": "0.1.14",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -14,6 +14,7 @@
     "@nextui-org/table": "^2.0.36",
     "framer-motion": "^11.2.11",
     "googleapis": "^140.0.0",
+    "lodash": "^4.17.21",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
