--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "framer-motion": "^11.2.11",
     "googleapis": "^140.0.0",
     "lodash": "^4.17.21",
-    "next": "^14.2.4",
+    "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
