--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "framer-motion": "^11.2.11",
     "googleapis": "^140.0.0",
     "lodash": "^4.17.21",
+    "mongoose": "^8.8.3",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
     "react": "^18",
