--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@nextui-org/react": "^2.4.6",
     "@nextui-org/table": "^2.0.36",
     "boxicons": "^2.1.4",
+    "express": "^4.21.2",
     "framer-motion": "^11.2.11",
     "googleapis": "^140.0.0",
     "lodash": "^4.17.21",
     "mongoose": "^8.8.3",
     "next": "14.2.4",
     "next-auth": "^4.24.7",
+    "node-mocks-http": "^1.16.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
@@ -38,6 +40,7 @@
     "@types/node": "^20.14.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/supertest": "^6.0.2",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
