--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "sonner": "^1.5.0",
-    "use-sound": "^4.0.3"
+    "use-sound": "^4.0.3",
+    "yarn": "^1.22.22"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
