--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/core": "^6.1.0",
     "@nextui-org/react": "^2.4.6",
     "@nextui-org/table": "^2.0.36",
+    "@types/supertest": "^6.0.2",
     "boxicons": "^2.1.4",
     "express": "^4.21.2",
     "framer-motion": "^11.2.11",
