--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^11.2.11",
     "googleapis": "^140.0.0",
     "lodash": "^4.17.21",
+    "mongoose": "^8.8.4",
     "next": "^14.2.18",
     "next-auth": "^4.24.7",
     "node-mocks-http": "^1.16.1",
