--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,6 @@
       "use-sound": ["./node_modules/use-sound/"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/components/shop/helpers/HandleAddToCart.js"],
   "exclude": ["node_modules"]
 }
