--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --verbose"
+    "test": "jest --verbose",
+    "test:backend": "jest BackendTests --verbose",
+    "test:frontend": "jest FrontendTests --verbose"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.1.0",
